button posistion fixed. main page css elements further aligned

--- a/client/src/components/dragndrop/App.css
+++ b/client/src/components/dragndrop/App.css
@@ -38,7 +38,7 @@ padding: 0;
 
 .droppable {
   position: absolute;
-  top: 20px;
+  top: 27px;
   width: 150px;
   height: 100vh;
 
